updated backend with otp verification

--- a/Frontend/my-printfx/src/app/forgot-password/forgot-password.component.html
+++ b/Frontend/my-printfx/src/app/forgot-password/forgot-password.component.html
@@ -4,8 +4,8 @@
     
     <form (ngSubmit)="onForgotPassword()" [formGroup]="forgotPasswordForm">
       <div>
-        <input id="email" type="email"  placeholder="Email:" formControlName="email" class="wide-input" />
-        <div *ngIf="forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched">
+        <input id="email" type="email"  placeholder="Email:" formControlName="username" class="wide-input" />
+        <div *ngIf="forgotPasswordForm.get('username')?.invalid && forgotPasswordForm.get('username')?.touched">
           <small>Please enter a valid email.</small>
         </div>
       </div>
