--- a/Frontend/my-printfx/src/app/app.component.css
+++ b/Frontend/my-printfx/src/app/app.component.css
@@ -1,9 +1,14 @@
-.navbar {
+.navbar { 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: green;
   padding: 2rem;
+  margin-top: 0;
 }
 
 .navbar-link {
@@ -14,4 +19,9 @@
 
 .navbar-link:hover {
   text-decoration: underline;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
