updated front end For otp verification

--- a/Frontend/my-printfx/src/app/password-reset/password-reset.component.css
+++ b/Frontend/my-printfx/src/app/password-reset/password-reset.component.css
@@ -1,12 +1,13 @@
 .password-reset-container {
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    font-family: Arial, sans-serif;
+  margin-top: 5rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  max-width: 400px;
+  padding: 60px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
   .password-reset-container h2 {
