--- a/Frontend/my-printfx/src/app/forgot-password/forgot-password.component.css
+++ b/Frontend/my-printfx/src/app/forgot-password/forgot-password.component.css
@@ -13,13 +13,15 @@
   }
   
   .forgot-password-container {
+    margin-top: 5rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
     max-width: 400px;
-    margin: 2rem auto;
-    padding: 2rem;
+    padding: 60px;
     border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
 
   .wide-input {
