--- a/Frontend/my-printfx/src/app/app.component.css
+++ b/Frontend/my-printfx/src/app/app.component.css
@@ -4,24 +4,49 @@
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-between; 
   background-color: green;
-  padding: 2rem;
-  margin-top: 0;
 }
 
-.navbar-link {
-  color: white;
+.inline-container {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-nav {
+  display: flex;
+  align-items: center;
+  gap: 20px; 
+  margin-left: auto; 
+  list-style: none; 
+}
+
+.nav-item {
+  list-style-type: none;
+}
+
+.material-icons.md-36 {
+  font-size: 35px;
+  line-height: 2.5;
+  vertical-align: middle; 
+}
+
+.material-icons.other_icon {
+  line-height: 2.5;
+  vertical-align: middle;
+}
+
+.nav-link {
+  display: inline-block;
+  padding: 10px 15px;
+  color: black;
   text-decoration: none;
-  font-size: 1.2rem;
+  cursor: pointer;
+  line-height: 2.5;
 }
 
-.navbar-link:hover {
+.nav-link:hover {
+  color: black;
   text-decoration: underline;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
 }
