--- a/Frontend/my-printfx/src/app/app.component.html
+++ b/Frontend/my-printfx/src/app/app.component.html
@@ -3,9 +3,10 @@
   <nav class="navbar">
     <!-- Left Side: Local Movies & Home -->
     <div class="inline-container">
-      <i class="material-icons md-36">local_movies</i> 
-      <a class="nav-link" routerLink="login">Home</a>
-    </div>    
+      <a class="nav-link" routerLink="login">
+          <img src="assets\images\DMG_Full_Color.svg" alt="Home Icon" class="icon-image">
+      </a>
+  </div>
   
     <!-- Right Side: Login, Logout, User Info -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
